--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -15,6 +15,7 @@
 @import "base/lists.less";
 @import "base/objects.less";
 @import "base/overflow.less";
+@import "base/pages.less";
 @import "base/positions.less";
 @import "base/sizing.less";
 @import "base/spacing.less";
