--- a/assets/less/components/forms.less
+++ b/assets/less/components/forms.less
@@ -15,7 +15,7 @@
 .newsletter-form {
   &:extend(.shadow, .flex, .items-center, .rounded, .self-start, .p-1, .bg-grey-light);
   input {
-    &:extend(.w-full, .rounded-sm, .appearance-none, .border-none, .p-2, .tracking-wide, .font-bold, .font-md, .mr-2);
+    &:extend(.w-full, .rounded-sm, .appearance-none, .border-none, .p-3, .md\:p-2, .tracking-wide, .font-bold, .font-md, .md\:mr-2);
   }
   // Button is in buttons.less
 }
