--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -39,12 +39,18 @@
     <section class="font-lg pt-0 pl-6 pb-4 pr-6 leading-normal text-center">
       <p>{{ _('Thunderbird is independent, free, and Open Source software sustained by your donations. Help us keep the project alive!') }}</p>
     </section>
-    <section id="donate-buttons" class="flex justify-center mt-6 mb-6">
-      <span class="fundraiseup-button">
-        <a href="#XSHRMXJE" style="display: none"></a>
-      </span>
-      <button class="btn-body btn-secondary no-hover" id="amount-cancel">
-        {{ _('No Thanks, Download Now!') }}
+    <section id="donate-buttons" class="flex justify-center mt-6 mb-6 mx-auto">
+      <a href="#" class="btn-donate-and-download" id="amount-submit" data-donate-content="download">
+        <span class="donate-heart">
+          {{ svg('heart') }}
+          <span class="donate-wave">
+          <!-- o/ -->
+          </span>
+        </span>
+        <p>{{ _('Donate & Download') }}</p>
+      </a>
+      <a href="#" class="btn-body btn-secondary" id="amount-cancel">
+        <p>{{ _('No Thanks, Download Now!') }}</p>
         <span>
           <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g id="UI" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd">
@@ -52,7 +58,7 @@
             </g>
           </svg>
         </span>
-      </button>
+      </a>
     </section>
   </form>
   <footer class="w-4/5 mx-auto border-0 border-t border-solid border-grey-light p-6">
