Required 'Ways to Give' Euro beneficiary name update.

--- a/website/_includes/ways-to-give.html
+++ b/website/_includes/ways-to-give.html
@@ -20,7 +20,7 @@
     <li><span class="font-bold">{{ _('Receiving Bank (Pay to):') }}</span> Standard Chartered Bank</li>
     <li><span class="font-bold">{{ _('City & Country/Region:') }}</span> Frankfurt, Germany</li>
     <li><span class="font-bold">{{ _('SWIFT/BIC Code:') }}</span> SCBLDEFX</li>
-    <li><span class="font-bold">{{ _('Beneficiary Name (For credit to):') }}</span> MZLA Technologies Corporation</li>
+    <li><span class="font-bold">{{ _('Beneficiary Name (For credit to):') }}</span> SVB - MZLA Technologies Corporation</li>
     <li><span class="font-bold">{{ _('IBAN:') }}</span> DE05512305000500215809</li>
     <li><span class="font-bold">{{ _('Memo field:') }}</span> Thunderbird</li>
   </ul>
