Fix #371: Create a newsletter landing page, and consolidate the newsletter form. (#372)
* Don't self destruct our watch observer on an exception (at least the two most common ones).

* Fix an unrelated issue with inlined svgs rendering incorrectly on some pages.

* Allow any page to hide the header via the `hide_header` template variable.

* Make the newsletter input and button about double in size.

* Enable sm media query break points, so we can make things nicer for mobile.

* Fold some inline css into our less files, increase legibility with colours, and tighten up the graphics on our newsletter form.

--- a/assets/less/components/forms.less
+++ b/assets/less/components/forms.less
@@ -11,3 +11,11 @@
 .form-select {
   &:extend(.block, .w-40, .rounded-sm, .border-none, .bg-grey-light, .text-black, .p-1, .pr-6, .appearance-none);
 }
+
+.newsletter-form {
+  &:extend(.shadow, .flex, .items-center, .rounded, .self-start, .p-1, .bg-grey-light);
+  input {
+    &:extend(.w-full, .rounded-sm, .appearance-none, .border-none, .p-3, .md\:p-2, .tracking-wide, .font-bold, .font-md, .md\:mr-2);
+  }
+  // Button is in buttons.less
+}
