--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -16,6 +16,7 @@
   grey: #f9f9f9;
   grey-light: #f0f0f0;
   grey-lighter: #fdfdfd;
+  grey-lightest: #b1b1b3;
   blue-dark: #36385A;
   orange: #ff9500;
   blue-lightest: #B2D9FF;
@@ -128,7 +129,7 @@
   h-4: 1rem;
   h-5: 1.25rem;
   h-6: 1.5rem;
-  // h-8: 2rem;
+  h-8: 2rem;
   // h-10: 2.5rem;
   // h-12: 3rem;
   // h-16: 4rem;
@@ -162,7 +163,7 @@
 @xxl: 1440px;
 
 @breakpoints: {
-  // sm: @sm;
+  sm: @sm;
   md: @md;
   lg: @lg;
   xl: @xl;
