--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -117,7 +117,7 @@ button {
 }
 
 .btn-newsletter {
-  &:extend(.rounded-xs, .border-none, .bg-primary-button, .text-white, .p-2, .pl-3, .pr-3, .uppercase, .font-semibold, .appearance-none);
+  &:extend(.md\:w-40, .leading-none, .md\:leading-normal, .font-md, .rounded-sm, .border-none, .bg-primary-button, .text-white, .p-2, .pl-3, .pr-3, .uppercase, .font-bold, .appearance-none);
 
   &:hover,
   &:focus {
