--- a/website/_includes/bedrock/base-resp.html
+++ b/website/_includes/bedrock/base-resp.html
@@ -45,6 +45,9 @@
     {% block extrahead %}
       {# Extra header stuff (scripts, styles, metadata, etc) seen by all browsers. Use the 'page_css' block for CSS you want to hide from IE8 and lower. #}
     {% endblock %}
+    <script>
+      window.siteLocale = "{{ LANG }}";
+    </script>
   </head>
 
   <body {% if self.body_id() %}id="{% block body_id %}{% endblock %}" {% endif %}class="html-{{ DIR }} {% block body_class %}{% endblock %}" {% block body_attrs %}{% endblock %}>
