--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -74,12 +74,12 @@
         </a>
       </li>
       <li class="mr-4">
-        <a class="text-black-lightest no-underline" href="https://give.thunderbird.net/en-CA/ways-to-give/">
+        <a class="text-black-lightest no-underline" href="/donate/#ways-to-give">
           {{ _('Other ways to donate') }}
         </a>
       </li>
       <li>
-        <a class="text-black-lightest no-underline" href="https://give.thunderbird.net/en-CA/faq/">
+        <a class="text-black-lightest no-underline" href="/donate/#faq">
           {{ _('FAQ') }}
         </a>
       </li>
