--- a/assets/less/components/donation-elements.less
+++ b/assets/less/components/donation-elements.less
@@ -58,6 +58,15 @@
     }
 }
 
+.ways-to-give-list-info {
+    &:extend(.pl-0);
+    list-style: none;
+
+    li {
+        &:extend(.pb-2);
+    }
+}
+
 // Helper function / constant for our blue
 .colour-blue(@alpha) {
     background-color: rgba(0, 128, 255, @alpha);
