FAQ copy update

--- a/website/_includes/ways-to-give.html
+++ b/website/_includes/ways-to-give.html
@@ -14,7 +14,7 @@
 </section>
 
 <section class="font-md tracking-wide">
-  <h3 class="font-lg text-blue-dark">{{ _('Euros:') }}</h3>
+  <h3 id="ways-to-give-euro" class="font-lg text-blue-dark">{{ _('Euros:') }}</h3>
   <ul class="ways-to-give-list-info">
     <li><span class="font-bold">{{ _('Account Currency:') }}</span> Euro (EUR)</li>
     <li><span class="font-bold">{{ _('Receiving Bank (Pay to):') }}</span> Standard Chartered Bank</li>
@@ -27,7 +27,7 @@
 </section>
 
 <section class="font-md tracking-wide">
-  <h3 class="font-lg text-blue-dark">{{ _('British Pound Sterling:') }}</h3>
+  <h3 id="ways-to-give-pound" class="font-lg text-blue-dark">{{ _('British Pound Sterling:') }}</h3>
   <ul class="ways-to-give-list-info">
     <li><span class="font-bold">{{ _('Account Currency:') }}</span> British Pound Sterling (GBP)</li>
     <li><span class="font-bold">{{ _('Receiving Bank (Pay to):') }}</span> National Westminster Bank</li>
@@ -43,7 +43,7 @@
 </section>
 
 <section class="font-md tracking-wide">
-  <h2 class="font-2xl text-blue-dark">{{ _('Check (via postal service)') }}</h2>
+  <h2 id="ways-to-give-check" class="font-2xl text-blue-dark">{{ _('Check (via postal service)') }}</h2>
   <p>
     {{ _('MZLA/Thunderbird is happy to accept your donation <span class="%(class)s">(made payable to “MZLA Technologies Corp”)</span> via check; however please
     note that processing and acknowledgment of your gift may be delayed by changes to our office procedures due to the
