--- a/website/_includes/ways-to-give.html
+++ b/website/_includes/ways-to-give.html
@@ -6,9 +6,8 @@
   <h2 class="font-2xl text-blue-dark">{{ _('Bank Transfer / SEPA') }}</h2>
   <p>{{ _('We accept contributions in Euros through Single European Payment Area (SEPA)
     transfer, and British Pounds through BACS transfer.') }}</p>
-  <p>{{ _('Please note that for smaller (under 10 EUR or equivalent) contributions, <span class="%(class)s">and
-    especially for contributions under 5 EUR or equivalent</span>, we request that you contribute via credit card or PayPal to
-    help reduce our processing fees.')|format(class='font-bold') }}</p>
+  <p>{{ _('Please note that for smaller (under 10 EUR or equivalent) contributions, we request that you contribute via credit card or PayPal to
+    help reduce our processing fees.') }}</p>
   <p>{{ _('If your bank requests our physical address, it is 2 Harrison Street, Suite 175, San
     Francisco, CA 94105 USA.') }}</p>
 </section>
@@ -45,17 +44,14 @@
 <section class="font-md tracking-wide">
   <h2 id="ways-to-give-check" class="font-2xl text-blue-dark">{{ _('Check (via postal service)') }}</h2>
   <p>
-    {{ _('MZLA/Thunderbird is happy to accept your donation <span class="%(class)s">(made payable to “MZLA Technologies Corp”)</span> via check; however please
-    note that processing and acknowledgment of your gift may be delayed by changes to our office procedures due to the
-    COVID-19 pandemic. You can send checks to:')|format(class='font-bold') }}
+    {{ _('MZLA/Thunderbird is happy to accept your donation <span class="%(class)s">(made payable to “MZLA Technologies Corp”)</span> via check;
+    however please note that we can only accept checks in US dollars drawn on a US bank.')|format(class='font-bold') }}
   </p>
-  <ul class="ways-to-give-list-info font-style-italic">
-    <li>MZLA Technologies Corporation</li>
+  <ul class="ways-to-give-list-info">
+    <li class="font-bold">MZLA Technologies Corporation</li>
     <li>Attn: Thunderbird Donor Care</li>
     <li>2 Harrison Street, Suite 175</li>
     <li>San Francisco, CA 94105</li>
   </ul>
   <p>{{ _('Please include your email address on the memo line of your check to help us track and attribute your gift.') }}</p>
-
-  <p>{{ _('Please also note that MZLA/Thunderbird can only accept checks in U.S. dollars drawn on a U.S. bank.') }}</p>
 </section>
