--- a/website/includes/base-resp.html
+++ b/website/includes/base-resp.html
@@ -2,7 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-{% extends "_includes/bedrock/base-resp.html" %}
+{% extends "includes/bedrock/base-resp.html" %}
 
 {% block facebook_id %}348169218537151{# facebook.com/Thunderbird #}{% endblock %}
 {% block twitter_id %}mozthunderbird{% endblock %}
@@ -61,7 +61,7 @@
 
     {% block header_content %}{% endblock %}
 
-    {% include '_includes/donate-modal.html' %}
+    {% include 'includes/donate-modal.html' %}
 
     {% block breadcrumbs %}{% endblock %}
 
