--- a/website/includes/bedrock/base-resp.html
+++ b/website/includes/bedrock/base-resp.html
@@ -92,7 +92,7 @@
     {% block email_form_unwrapped %}{% endblock %}
 
     {% block site_footer %}
-        {% include '_includes/site-footer.html' %}
+        {% include 'includes/site-footer.html' %}
     {% endblock %}
 
     {% block site_js %}
