--- a/website/includes/site-footer.html
+++ b/website/includes/site-footer.html
@@ -71,7 +71,7 @@
         </li>
       </ul>
       <aside class="mt-2">
-        {% include '_includes/lang_switcher.html' %}
+        {% include 'includes/lang_switcher.html' %}
       </aside>
     </aside>
   </section>
