--- a/website/includes/_enonly/release-notes.html
+++ b/website/includes/_enonly/release-notes.html
@@ -2,7 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. #}
 
-{% extends "_includes/base-resp.html" %}
+{% extends "includes/base-resp.html" %}
 
 {% block page_title_prefix %}{% endblock %}
 {% block page_title %}{{ _('Thunderbird — {channel} Notes ({version})')|f(channel=channel_name, version=release.version) }}{% endblock %}
@@ -176,6 +176,6 @@
     </section>
   {% endif %}
 
-  {% include '_includes/site-prefooter.html' %}
+  {% include 'includes/site-prefooter.html' %}
 
 {% endblock %}
