Swap the utm_content: `download` -> `post_download` for our FRU download modal.

--- a/website/includes/donate-modal.html
+++ b/website/includes/donate-modal.html
@@ -40,7 +40,7 @@
       <p>{{ _('Thunderbird is independent, free, and Open Source software sustained by your donations. Help us keep the project alive!') }}</p>
     </section>
     <section id="donate-buttons" class="flex justify-center mt-6 mb-6 mx-auto">
-      <a href="#" class="btn-donate-and-download" id="amount-submit" data-donate-content="download">
+      <a href="#" class="btn-donate-and-download" id="amount-submit" data-donate-content="post_download">
         <span class="donate-heart">
           {{ svg('heart') }}
           <span class="donate-wave">
