--- a/website/includes/donate-modal.html
+++ b/website/includes/donate-modal.html
@@ -49,7 +49,7 @@
         </span>
         <p>{{ _('Donate & Download') }}</p>
       </a>
-      <a href="#" class="btn-body btn-secondary" id="amount-cancel">
+      <a href="#" class="btn-body btn-secondary donate-download-link" id="amount-cancel">
         <p>{{ _('No Thanks, Download Now!') }}</p>
         <span>
           <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
