--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -26,6 +26,7 @@
 @import "components/links.less";
 @import "components/buttons.less";
 @import "components/donation-elements.less";
+@import "components/download.less";
 @import "components/faq.less";
 @import "components/forms.less";
 @import "components/headings.less";
