--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -19,7 +19,6 @@
   grey-lightest: #b1b1b3;
   blue-dark: #36385A;
   orange: #ff9500;
-  yellow-banner: #fff260;
   blue-lightest: #B2D9FF;
   blue: #0080FF;
   blue-dark: #245CAD;
@@ -131,8 +130,8 @@
   h-5: 1.25rem;
   h-6: 1.5rem;
   h-8: 2rem;
-  // h-10: 2.5rem;
-  // h-12: 3rem;
+  h-10: 2.5rem;
+  h-12: 3rem;
   h-16: 4rem;
   // h-20: 5rem;
   // h-24: 6rem;
