Add post-download thank you page. (Fixes #391) (#394)
* Update download_thunderbird() to replace a deprecated parameter with a button_class parameter + new hide footer links parameter
* Rough pass at a Thank you, please install Thunderbird page.
* Check for a get `downloaded=true` query parameter, and if it exists don't download Thunderbird.

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -130,9 +130,9 @@
   h-5: 1.25rem;
   h-6: 1.5rem;
   h-8: 2rem;
-  // h-10: 2.5rem;
-  // h-12: 3rem;
-  // h-16: 4rem;
+  h-10: 2.5rem;
+  h-12: 3rem;
+  h-16: 4rem;
   // h-20: 5rem;
   // h-24: 6rem;
   // h-32: 8rem;
@@ -403,6 +403,7 @@
   font-lg: 17px;
   font-xl: 19px;
   font-2xl: 21px;
+  font-3xl: 25px;
   font-4xl: 41px;
   font-hero: 59px;
 }
