--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -119,6 +119,9 @@ button {
 .btn-newsletter {
   &:extend(.md\:w-40, .leading-none, .md\:leading-normal, .font-md, .rounded-sm, .border-none, .bg-primary-button, .text-white, .p-2, .pl-3, .pr-3, .uppercase, .font-bold, .appearance-none);
 
+  // Keeps button text one-line
+  white-space: nowrap;
+
   &:hover,
   &:focus {
     &:extend(.shadow-md);
@@ -129,6 +132,12 @@ button {
     &:extend(.bg-blue);
   }
 }
+
+// No javascript tweak
+.no-js .btn-newsletter {
+  line-height: 3rem;
+}
+
 
 .btn-join {
   &:extend(.text-white, .font-md, .font-semibold, .no-underline, .uppercase, .inline-block, .pt-3, .pb-3, .pl-6, .pr-6, .mb-5, .bg-primary-button, .rounded-xs, .shadow);
@@ -170,6 +179,15 @@ button {
   &:hover,
   &:focus {
     &:extend(.shadow-md, .bg-white, .text-blue);
+  }
+}
+
+.btn-banner {
+  &:extend(.bg-transparent, .text-black, .font-regular, .font-md, .font-semibold, .inline-block, .pt-3, .pb-3, .pl-4, .pr-4, .rounded-sm, .m-1);
+
+  &:hover,
+  &:focus {
+    &:extend(.no-underline);
   }
 }
 
