--- a/website/includes/download-button.html
+++ b/website/includes/download-button.html
@@ -1,8 +1,9 @@
 {# This Source Code Form is subject to the terms of the Mozilla Public
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
-
-{% set button_class = 'btn-'+channel if channel else 'btn-download' %}
+{% if not button_class %}
+  {% set button_class = 'btn-'+channel if channel else 'btn-download' %}
+{% endif %}
 {% if not flex_class %}
   {% set flex_class = 'self-start' if channel or section == 'body' else 'justify-center' %}
 {% endif %}
@@ -66,6 +67,7 @@
       </li>
     {% endfor %}
   </ul>
+  {% if not hide_footer_links %}
   <p class="download-other download-other-desktop os_android os_ios os_linux os_linux64 os_osx os_win os_win64 os_winsha1 font-sm mt-0">
     {% if channel != 'daily' %}{# Daily doesn't have an all download page or release notes. #}
       <a href="{{ thunderbird_url('all', channel) }}" class="small-link {% if section == 'body' %} text-blue {% endif %}">{{ _('Systems &amp; Languages') }}</a> &bull;
@@ -73,4 +75,5 @@
     {% endif %}
     <a href="{{ url('privacy.notices.thunderbird') }}" class="small-link {% if section == 'body' %} text-blue {% endif %}">{{ _('Privacy') }}</a>
   </p>
+  {% endif %}
 </div>
