Added a beta appeal page for the TB Beta Appeal project

--- a/assets/less/components/links.less
+++ b/assets/less/components/links.less
@@ -123,4 +123,13 @@ a {
   .go {
     display: none;
   }
+
+  .thumbnail {
+    text-align: center;
+
+    img {
+      width: auto;
+      height: 200px;
+    }
+  }
 }
