Add an embedded donor contact form and replace the donor.contact url mapping to the new form (Fixes #435)
Add a very small thank you page

Style tweaks for new donor form

Move url mapping: donor.contact to thunderbird.donate.contact and add a back button to the thank-you page.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -32,3 +32,6 @@
 @import "components/headings.less";
 @import "components/markup.less";
 @import "components/tabs.less";
+
+// Form Assembly
+@import "components/donor-contact-form.less";
