--- a/website/includes/faq.html
+++ b/website/includes/faq.html
@@ -1,18 +1,210 @@
 {# This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
-
-{% set faq_entries = get_faq_list() %}
-
 <section>
-  {% for entry in faq_entries %}
   <details class="faq-entry">
     <summary class="faq-question">
-      {{ entry['question'] }}
+      {{ _('What are the ways I can give?') }}
     </summary>
     <p class="faq-answer">
-      {{ entry['answer'] }}
+      {% trans trimmed donate=url('thunderbird.donate.form'), check=url('thunderbird.donate.ways-to-give.check'),
+      ways_to_help=url('thunderbird.get-involved') %}
+      You can <a href="{{ donate }}">donate online</a> securely by credit card or PayPal. Google Pay, Apple Pay, and
+      bank transfers through SEPA, iDEAL and ACH are also available online.<br/>
+      <strong>Give in your local currency!</strong> On <a href="{{ donate }}">our online form</a>, use the drop down
+      menu next to the amount. You will be charged in the currency you choose to give with.<br/>
+      <strong>Additionally you can</strong> give offline in USD by <a href="{{ check }}">mailing a check or money
+      order</a>.<br/>
+      <strong>Give the gift of your time!</strong> If you would like to learn how to contribute to Thunderbird in other
+      ways such as coding, translating or testing, please visit our <a href="{{ ways_to_help }}">Get Involved</a> page.
+      {% endtrans %}
     </p>
   </details>
-  {% endfor %}
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('How do I cancel or change my recurring gift? Can I change my payment method or my donation frequency?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed help=url('thunderbird.donate.contact') %}
+      Access your donation account settings using the 'Manage My Donation' button on your recent donation confirmation
+      email.
+      There you can change the amount, frequency, payment method and charge date. You can also cancel your recurring
+      donation plan.
+      If you run into any issues you can always <a href="{{ help }}">contact us</a>!
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('Does my gift give me access to tech support?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed url=url('support') %}
+      Anyone can access tech support for Thunderbird by visiting the <a href="{{ url }}">support forum</a>.
+      Thunderbird does not provide tech support or enhanced tech support in exchange for financial gifts.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('How can I turn off the donation message on the Thunderbird start page?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed url='https://support.mozilla.org/kb/how-disable-or-change-thunderbird-start-page' %}
+      To learn how to customize your start page please visit:<br/><a href="{{ url }}">{{ url }}</a>
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('Is my gift tax deductible?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed %}
+      Gifts to Thunderbird are <strong>not tax-deductible as charitable gifts</strong>, but are greatly appreciated.
+      Giving to Thunderbird supports the development of our leading open source cross-platform email and calendaring
+      client, free for business and personal use. Your gift will help ensure it stays that way, and will support future
+      development.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('How can I get a business receipt?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed donate=url('thunderbird.donate.form') %}
+      When you donate via our <a href="{{ donate }}">online form</a>, simply check the box 'Donate as an Organization'
+      and
+      include your company name. The receipt you receive to the email address used to make your contribution will
+      include your business information.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('Is my donation secure?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed privacy=url('privacy') %}
+      Yes, we use industry-standard SSL technology to keep your information secure. We partner with Stripe, the
+      industry's established payment processor trusted by some of the world's largest companies. Your sensitive
+      financial information never touches our servers. We send all data directly to Stripe's PCI-compliant servers
+      through SSL. We understand that your privacy is very important. For complete information please refer to the <a
+      href="{{ privacy }}">Mozilla Privacy Policy</a>.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('Why do you need my address in order to process a gift?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed url=url('privacy'), check=url('thunderbird.donate.ways-to-give.check') %}
+      We understand that your privacy is very important. We ask for a minimum amount of information required to process
+      credit card payments, including billing addresses. This allows our payment processor to verify your identity,
+      process your payment, and prevent fraudulent charges to your credit card. We keep your information private — if
+      you have questions, please refer to our <a href="{{ url }}">Privacy Policy</a>. If you would rather not fill in
+      your
+      information on our online form, you can mail us a <a href="{{ check }}">check</a>.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('Are there additional fees on my donation?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed %}
+      We do not collect any additional fees or taxes. When you donate in your local currency you are not charged a
+      conversion fee by your credit card. Optionally, you can choose to cover our transaction costs on your donation.
+      This is completely voluntary and you may opt in or out using the checkbox on our donation form. Our organization
+      is based in the United States. We encourage donors to research any additional external taxes or fees that may be
+      applied by regulators such as your bank or tax authority.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('What are your transaction costs on donations?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed %}
+      When you opt to cover our transaction costs, you're covering both our processing and donation platform costs. The
+      costs associated with our robust online donation system allows us to continue scaling sustainably as our
+      supporter-base grows. Our donation platform and payment processor partners reduce internal costs associated with
+      maintaining our own system from scratch. Our partners ensure we can accept a wide range of currencies/payment
+      methods and remain PCI compliant in all of the countries that we accept gifts from. The transaction costs donors
+      may choose to cover are based on an estimate of our overall costs. Due to many factors actual costs may fluctuate.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('Can I give in cryptocurrencies?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed %}
+      <strong>No.</strong> We are not currently accepting cryptocurrency gifts.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('How will my gift be used?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed %}
+      Thunderbird is the leading open source cross-platform email and calendaring client, free for business and personal
+      use. Your gift will help ensure it stays that way, and will support future development.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('What is Thunderbird’s relationship to MZLA Technologies Corporation?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed %}
+      Thunderbird is a project of MZLA Technologies Corporation, which is a wholly owned subsidiary of Mozilla
+      Foundation.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('Doesn’t Thunderbird earn income?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed %}
+      Currently, the majority of Thunderbird’s revenue comes from generous gifts from users and friends of Thunderbird.
+      Companies and individuals support the development of the product now and in the future.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('Who can I email directly with questions about giving?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed help=url('thunderbird.donate.contact'), support=url('support') %}
+      If you have a question about giving to Thunderbird, please contact us via <a href="{{ help }}">this form</a>. If you
+      need technical support, please head over to <a href="{{ support }}">Thunderbird Support</a> for assistance.
+      {% endtrans %}
+    </p>
+  </details>
 </section>
