--- a/media/css/115release.css
+++ b/media/css/115release.css
@@ -164,7 +164,7 @@ header {
   background-position: bottom;
   background-repeat: no-repeat;
   padding-inline: 16px;
-  padding-block: 10rem 500px;
+  padding-block: 100px 500px;
 }
 
 header h1 {
