--- a/assets/css/115-homepage.css
+++ b/assets/css/115-homepage.css
@@ -581,6 +581,92 @@ button:hover::after {
   display: none;
 }
 
+.download-button .ios-download,
+.download-button .linux-arm-download,
+.download-button .unrecognized-download,
+.download-button .unsupported-download,
+.download-button .unsupported-download-osx,
+.download-button .nojs-download {
+  display: none;
+}
+.download-button .os_msi,
+.download-button .os_winsha1,
+.download-button .os_win64,
+.download-button .os_linux,
+.download-button .os_linux64,
+.win7up.x86.x64 .download-button .os_win,
+.android .download-button-desktop,
+.windows.arm .download-button .os_win,
+.linux.arm .download-button .os_linux,
+.linux.x86.x64 .download-list .os_linux,
+.download-button .os_win,
+.download-button .os_osx,
+.download-button .os_android,
+.download-button .os_ios,
+.no-js .download-list,
+.other .download-list {
+  display: none !important;
+}
+.win7up.x86.x64 .download-button .os_win64,
+.linux .download-button .os_linux,
+.linux.x86.x64 .download-button .os_linux64,
+.windows .download-button .os_win,
+.osx .download-button .os_osx,
+.android .download-button .os_android,
+.download-button-android .os_android,
+.android .download-button-desktop .download-list,
+.android .download-button-desktop small.os_win,
+.download-button-ios .os_ios,
+.ios .download-button .os_ios,
+.ios .download-button .ios-download,
+.ios .download-button-desktop .download-list,
+.other .download-button-android .download-list,
+.other .download-button small.os_win {
+  display: block !important;
+}
+.windows.arm .download-button .unsupported-download,
+.linux.arm .download-button .linux-arm-download,
+.chromeos .download-button .unsupported-download,
+.oldwin .download-button .unsupported-download,
+.oldmac .download-button .unsupported-download {
+  display: block;
+  max-width: 250px;
+}
+.windows.arm .download-button .fx-privacy-link,
+.linux.arm .download-button .fx-privacy-link,
+.chromeos .download-button .fx-privacy-link,
+.oldwin .download-button .fx-privacy-link,
+.oldmac .download-button .fx-privacy-link {
+  display: none;
+}
+.android .download-button-desktop .nojs-download,
+.ios .download-button-desktop .nojs-download,
+.no-js .download-button .nojs-download {
+  display: block;
+}
+.other .download-button .unrecognized-download {
+  display: block;
+}
+.download-button .download-list .os_android.x86,
+.download-button .download-other.os_android .api-15,
+.android.x86 .download-button .download-list .os_android.armv7up,
+.android.x86 .download-button .download-other.os_android .x86 {
+  display: none !important;
+}
+.android.x86 .download-button .download-list .os_android.x86 {
+  display: block !important;
+}
+.android.x86 .download-button .download-other.os_android .armv7up {
+  display: inline !important;
+}
+.windows.sha-1 .download-button .os_win {
+  display: none !important;
+}
+.windows.sha-1 .download-button .os_winsha1 {
+  display: block !important;
+}
+
+
 .site-nav {
   box-sizing: border-box;
   position: fixed;
