--- a/website/includes/new/base.html
+++ b/website/includes/new/base.html
@@ -30,7 +30,7 @@
     <link rel="shortcut icon" href="{% block page_favicon %}{{ static('img/favicon.ico') }}{% endblock %}">
     {% endblock shared_meta %}
     <link href="/media/css/normalize.css" rel="stylesheet" type="text/css" />
-    <link href="/media/css/thunderbird-styles-new.css" rel="stylesheet" type="text/css" />
+    <link href="/media/css/tb-115-style.css" rel="stylesheet" type="text/css" />
 
     {{ l10n_css() }}
 
