--- a/assets/css/115-homepage.css
+++ b/assets/css/115-homepage.css
@@ -451,7 +451,7 @@
 
   --bg: white;
   --txt: var(--color-ink-80);
-  --accent: var(--color-blue-50);
+  --accent: var(--color-blue-60);
   --glow: var(--color-purple-70);
   --separator-color: var(--color-gray-20);
   --nav-bg: transparent;
@@ -520,10 +520,15 @@ a:visited {
   width: 32px;
 }
 
+.download-button {
+  transform: translateX(-20px);
+}
+
 .btn-donate,
 .btn-donate-lg,
 .btn-download-inline,
 .btn-download-link,
+.download-link.btn-download,
 a.btn,
 button {
   font-size: 1.25rem;
@@ -541,6 +546,7 @@ button {
 .btn-donate-lg::before,
 .btn-download-inline::before,
 .btn-download-link::before,
+.download-link.btn-download::before,
 a.btn::before,
 button::before {
   content: '';
@@ -557,28 +563,27 @@ button::before {
 .btn-donate-lg::after,
 .btn-download-inline::after,
 .btn-download-link::after,
+.download-link.btn-download::after,
 a.btn::after,
 button::after {
   content: '';
   position: absolute;
   background-color: transparent;
-  background-image: radial-gradient(circle, var(--accent), transparent 20%);
-  background-size: 0;
+  background-image: radial-gradient(circle, var(--accent), var(--color-purple-60) 30%);
+  background-size: 400%;
   background-position: center;
-  opacity: 0;
+  opacity: .5;
   inset: 0;
+  inset-inline-end: 4px;
   z-index: -1;
   transition: all .3s;
 }
 
+.download-link.btn-download:hover::after,
 a.btn:hover::after,
 button:hover::after {
-  opacity: .25;
-  background-size: 800%;
-}
-
-.download-other {
-  display: none;
+  opacity: .75;
+  background-size: 500%;
 }
 
 .download-button .ios-download,
@@ -666,6 +671,9 @@ button:hover::after {
   display: block !important;
 }
 
+p.download-other.download-other-desktop.os_android.os_ios.os_linux.os_linux64.os_osx.os_win.os_win64.os_winsha1 {
+  display: none !important;
+}
 
 .site-nav {
   box-sizing: border-box;
@@ -1257,7 +1265,7 @@ header {
 }
 
 #free-your-inbox .cta {
-  --btn-bg: color-mix(in srgb, var(--bg) 75%, transparent);
+  --btn-bg: color-mix(in srgb, var(--bg) 90%, transparent);
   display: grid;
   place-items: center;
   gap: 9px;
@@ -1333,7 +1341,7 @@ header {
   content: '';
   position: absolute;
   background-color: transparent;
-  background-image: radial-gradient(circle, var(--accent), transparent 20%);
+  background-image: radial-gradient(circle, var(--accent), var(--color-purple-60) 20%);
   background-size: 0;
   background-position: center;
   opacity: 0;
