Update donation address.

--- a/website/includes/ways-to-give.html
+++ b/website/includes/ways-to-give.html
@@ -11,8 +11,8 @@
   <ul class="ways-to-give-list-info">
     <li class="font-bold">MZLA Technologies Corporation</li>
     <li>Attn: Thunderbird Donor Care</li>
-    <li>2 Harrison Street, Suite 175</li>
-    <li>San Francisco, CA 94105</li>
+    <li>149 New Montgomery St, 4th Floor</li>
+    <li>San Francisco, CA 94501</li>
   </ul>
   <p>{{ _('Please include your email address on the memo line of your check to help us track and attribute your gift.') }}</p>
 </section>
