Small style tweaks: - Reduced gaussianblur on mask svg to remove blur bleed over the bottom. - Moved the coverup block out of the way. - Moved the clouds bg down a bit more

--- a/assets/less/pages/eoy-2023-style.less
+++ b/assets/less/pages/eoy-2023-style.less
@@ -96,7 +96,7 @@ body {
   background-image: var(--bg-clouds);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: 60px;
+  background-position-y: 100px;
 }
 
 // Page layout
@@ -211,6 +211,8 @@ body {
 
 .coverup {
   background-color: var(--bg-body);
+  position: relative;
+  top: 2px;
   height: 32px;
   margin-top: -4%;
   z-index: 2;
