Adjust brightness levels for button hover, and active.

--- a/assets/less/pages/eoy-2023-style.less
+++ b/assets/less/pages/eoy-2023-style.less
@@ -70,6 +70,9 @@ body {
       .glow {
         opacity: 50%;
       }
+      .btn-donate-appeal {
+        filter: brightness(105%);
+      }
     }
     &:active {
       .glow {
@@ -77,6 +80,7 @@ body {
       }
       .btn-donate-appeal {
         box-shadow: 0px 1px 0px 0px #362ed3, inset 0px 2px 0px 0px rgba(255, 255, 255, 0.2);
+        filter: brightness(90%);
       }
     }
   }
