--- a/assets/css/115-homepage.css
+++ b/assets/css/115-homepage.css
@@ -859,7 +859,7 @@ header {
   font-weight: 300;
   text-align: center;
   line-height: 1.4;
-  max-inline-size: 55ch;
+  max-inline-size: 50.5rem;
 }
 
 .tagline {
