Fix styling error with mask svg that can occur on ultra-wide monitors.

--- a/assets/less/pages/eoy-2023-style.less
+++ b/assets/less/pages/eoy-2023-style.less
@@ -271,6 +271,8 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  z-index: 300;
+  position: relative;
 
   .body-title {
     font-family: var(--heading-font);
